Limpieza de la tabla de contenido.

--- a/Notebooks/proyect.ipynb
+++ b/Notebooks/proyect.ipynb
@@ -27,7 +27,7 @@
     "- [Beta Bank ¿Un cliente dejará el banco pronto?](#toc1_)    \n",
     "  - [Descripción del proyecto](#toc1_1_)    \n",
     "  - [Diccionario de datos](#toc1_2_)    \n",
-    "  - [Descarga y prepara los datos](#toc1_3_)    \n",
+    "  - [Descargar y prepara los datos](#toc1_3_)    \n",
     "    - [Importar librerias](#toc1_3_1_)    \n",
     "    - [Carga de datos](#toc1_3_2_)    \n",
     "    - [Estudiar los datos](#toc1_3_3_)    \n",
@@ -70,9 +70,6 @@
     "    - [Ajuste de umbral](#toc1_5_5_)    \n",
     "  - [Predicciones para el conjunto de prueba](#toc1_6_)    \n",
     "    - [Comparación de resultados](#toc1_6_1_)    \n",
-    "- [Comentarios generales](#toc2_)    \n",
-    "- [Comentarios generales](#toc3_)    \n",
-    "- [Comentarios generales](#toc4_)    \n",
     "\n",
     "<!-- vscode-jupyter-toc-config\n",
     "\tnumbering=false\n",
